tests/paczka1/fuzzy1/92696374.err
Error in line 1: 0B7aK8gyxt A494 45,7
Error in line 7: a0AG S487 16,6
Error in line 3: A494 A494 45,6
Error in line 20: a0AG S265 22,6
Error in line 31: A494 S487 1,6
Error in line 28: 1pj A494 26,1
Error in line 33: hB4zYI5J2 S487 90,8
Error in line 38: 5hdJr S45 38,3
